--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,8 @@
     "recharts": "^3.6.0",
     "react-dom": "^19.2.3",
     "@mui/material": "^7.3.6",
-    "@mui/icons-material": "^7.3.6"
+    "@mui/icons-material": "^7.3.6",
+    "@react-oauth/google": "^0.12.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
