--- a/front/package.json
+++ b/front/package.json
@@ -9,17 +9,21 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "recharts": "^3.6.0",
-    "react-dom": "^19.2.3",
-    "@mui/material": "^7.3.6",
-    "@mui/icons-material": "^7.3.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "@mui/material": "^6.1.10",
+    "@mui/icons-material": "^6.1.10",
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "recharts": "^2.13.3",
     "@react-oauth/google": "^0.12.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/node": "^22.10.2",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "~5.6.3",
+    "vite": "^6.0.3"
   }
 }
