--- a/front/package.json
+++ b/front/package.json
@@ -9,14 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@mui/material": "^6.1.10",
-    "@mui/icons-material": "^6.1.10",
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
+    "@mui/icons-material": "^6.1.10",
+    "@mui/material": "^6.1.10",
+    "@react-oauth/google": "^0.12.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "recharts": "^2.13.3",
-    "@react-oauth/google": "^0.12.1"
+    "socket.io-client": "^4.8.3"
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
