--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
       retries: 5
 
   evolution:
-    image: evoapicloud/evolution-api:v2.3.5
+    image: evoapicloud/evolution-api:latest
     container_name: whatsapp-evolution
     restart: unless-stopped
     ports:
@@ -66,8 +66,7 @@ services:
       - WEBHOOK_EVENTS_CONNECTION_UPDATE=true
       - WEBHOOK_EVENTS_MESSAGES_UPSERT=true
       - AUTHENTICATION_API_KEY=${EVOLUTION_API_KEY}
-      - CONFIG_SESSION_PHONE_VERSION=2.3000.1028716292
-      - CONFIG_SESSION_PHONE_CLIENT=Evolution API
+      - CONFIG_SESSION_PHONE_CLIENT=Ubuntu
       - CONFIG_SESSION_PHONE_NAME=Chrome
       - WEBSOCKET_ENABLED=true
       - WEBSOCKET_GLOBAL_EVENTS=true
