--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+# Environment files (NEVER commit these!)
+.env
+.env.local
+.env.*.local
+backend/.env
+front/.env
+front/.env.local
