--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,8 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@react-oauth/google": "^0.12.1",
+    "framer-motion": "^12.23.26",
+    "lucide-react": "^0.562.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "recharts": "^2.13.3",
