feat: add GEMINI_MODEL to environment variables and update AIService to use dynamic model name

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,7 @@ JWT_SECRET=your-super-secret-jwt-key-change-in-production
 
 # Gemini AI API Key
 GEMINI_API_KEY=your-gemini-api-key
+GEMINI_MODEL=gemini-2.5-flash
 
 # Evolution API Key (optional)
 EVOLUTION_API_KEY=your-evolution-api-key
