--- a/backend/.env.example
+++ b/backend/.env.example
@@ -17,6 +17,7 @@ GOOGLE_CLIENT_SECRET=your-google-client-secret
 
 # AI API
 GEMINI_API_KEY=your-gemini-api-key
+GEMINI_MODEL=gemini-2.5-flash
 
 # Evolution API
 EVOLUTION_API_URL=http://localhost:8080
