--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.8'
+version: "3.8"
 
 services:
   postgres:
@@ -10,13 +10,13 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: whatsapp_bot
     ports:
-      - '5432:5432'
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - saas-network
     healthcheck:
-      test: ['CMD-SHELL', 'pg_isready -U postgres']
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -26,14 +26,14 @@ services:
     container_name: whatsapp-redis
     restart: unless-stopped
     ports:
-      - '6380:6379'
+      - "6380:6379"
     volumes:
       - redis_data:/data
     networks:
       - saas-network
     command: redis-server --appendonly yes --bind 0.0.0.0
     healthcheck:
-      test: ['CMD', 'redis-cli', 'ping']
+      test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -43,7 +43,7 @@ services:
     container_name: whatsapp-evolution
     restart: unless-stopped
     ports:
-      - '8080:8080'
+      - "8080:8080"
     environment:
       - SERVER_URL=http://localhost:8080
       - DATABASE_ENABLED=true
@@ -58,7 +58,7 @@ services:
       - REDIS_URI=redis://redis:6379
       - CACHE_REDIS_ENABLED=true
       - CACHE_REDIS_URI=redis://redis:6379
-      - 'CACHE_REDIS_PREFIX=evolution:'
+      - "CACHE_REDIS_PREFIX=evolution:"
       - WEBHOOK_GLOBAL_ENABLED=true
       - WEBHOOK_GLOBAL_URL=http://host.docker.internal:3000/webhook/evolution
       - WEBHOOK_GLOBAL_WEBHOOK_BY_EVENTS=false
@@ -78,7 +78,7 @@ services:
     networks:
       - saas-network
     extra_hosts:
-      - 'host.docker.internal:host-gateway'
+      - "host.docker.internal:host-gateway"
 
   pgadmin:
     image: dpage/pgadmin4:latest
@@ -87,9 +87,9 @@ services:
     environment:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: admin
-      PGADMIN_CONFIG_SERVER_MODE: 'False'
+      PGADMIN_CONFIG_SERVER_MODE: "False"
     ports:
-      - '5050:80'
+      - "5050:80"
     volumes:
       - pgadmin_data:/var/lib/pgadmin
     depends_on:
@@ -105,7 +105,7 @@ services:
     container_name: whatsapp-frontend
     restart: unless-stopped
     ports:
-      - '5173:5173'
+      - "5173:5173"
     environment:
       - VITE_API_URL=http://localhost:3000
       - VITE_GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
@@ -125,7 +125,7 @@ services:
     container_name: whatsapp-backend
     restart: unless-stopped
     ports:
-      - '3000:3000'
+      - "3000:3000"
     environment:
       - NODE_ENV=development
       - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/whatsapp_bot
@@ -135,6 +135,7 @@ services:
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
       - GEMINI_API_KEY=${GEMINI_API_KEY}
+      - GEMINI_MODEL=${GEMINI_MODEL}
       - EVOLUTION_API_URL=http://evolution:8080
       - EVOLUTION_API_KEY=${EVOLUTION_API_KEY}
       - FRONTEND_URL=http://localhost:5173
