--- a/front/package.json
+++ b/front/package.json
@@ -14,6 +14,7 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/material": "^6.1.10",
     "@react-oauth/google": "^0.12.1",
+    "date-fns": "^3.6.0",
     "framer-motion": "^12.23.26",
     "lucide-react": "^0.562.0",
     "react": "^18.2.0",
