--- a/backend/.env.example
+++ b/backend/.env.example
@@ -14,6 +14,7 @@ JWT_SECRET=your-super-secret-jwt-key-change-in-production
 # Google OAuth
 GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET=your-google-client-secret
+GOOGLE_REDIRECT_URI=http://localhost:3000/api/integrations/google-calendar/callback
 
 # AI API
 GEMINI_API_KEY=your-gemini-api-key
