feat: add proxy-network to frontend and backend services for reverse proxy support

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -114,6 +114,7 @@ services:
       - /app/node_modules
     networks:
       - saas-network
+      - proxy-network
     depends_on:
       - backend
 
@@ -145,6 +146,7 @@ services:
       - /app/node_modules
     networks:
       - saas-network
+      - proxy-network
     depends_on:
       postgres:
         condition: service_healthy
@@ -159,3 +161,5 @@ volumes:
 networks:
   saas-network:
     driver: bridge
+  proxy-network:
+    external: true
