--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,6 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: whatsapp_bot
-    ports:
-      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
@@ -25,8 +23,6 @@ services:
     image: redis:7-alpine
     container_name: whatsapp-redis
     restart: unless-stopped
-    ports:
-      - "6380:6379"
     volumes:
       - redis_data:/data
     networks:
@@ -42,8 +38,6 @@ services:
     image: evoapicloud/evolution-api:latest
     container_name: whatsapp-evolution
     restart: unless-stopped
-    ports:
-      - "8080:8080"
     environment:
       - SERVER_URL=http://localhost:8080
       - DATABASE_ENABLED=true
@@ -60,7 +54,7 @@ services:
       - CACHE_REDIS_URI=redis://redis:6379
       - "CACHE_REDIS_PREFIX=evolution:"
       - WEBHOOK_GLOBAL_ENABLED=true
-      - WEBHOOK_GLOBAL_URL=http://host.docker.internal:3000/webhook/evolution
+      - WEBHOOK_GLOBAL_URL=http://backend:4000/webhook/evolution
       - WEBHOOK_GLOBAL_WEBHOOK_BY_EVENTS=false
       - WEBHOOK_EVENTS_QRCODE_UPDATED=true
       - WEBHOOK_EVENTS_CONNECTION_UPDATE=true
@@ -88,8 +82,6 @@ services:
       PGADMIN_DEFAULT_EMAIL: admin@admin.com
       PGADMIN_DEFAULT_PASSWORD: admin
       PGADMIN_CONFIG_SERVER_MODE: "False"
-    ports:
-      - "5050:80"
     volumes:
       - pgadmin_data:/var/lib/pgadmin
     depends_on:
@@ -107,7 +99,7 @@ services:
     ports:
       - "5173:5173"
     environment:
-      - VITE_API_URL=http://localhost:3000
+      - VITE_API_URL=http://localhost:4000
       - VITE_GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
     volumes:
       - ./front:/app
@@ -126,7 +118,7 @@ services:
     container_name: whatsapp-backend
     restart: unless-stopped
     ports:
-      - "3000:3000"
+      - "4000:4000"
     environment:
       - NODE_ENV=development
       - DATABASE_URL=postgresql://postgres:postgres@postgres:5432/whatsapp_bot
@@ -135,7 +127,7 @@ services:
       - JWT_SECRET=${JWT_SECRET:-super-secret-jwt-key}
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
       - GOOGLE_CLIENT_SECRET=${GOOGLE_CLIENT_SECRET}
-      - GOOGLE_REDIRECT_URI=${GOOGLE_REDIRECT_URI:-http://localhost:3000/api/integrations/google-calendar/callback}
+      - GOOGLE_REDIRECT_URI=${GOOGLE_REDIRECT_URI:-http://localhost:4000/api/integrations/google-calendar/callback}
       - GEMINI_API_KEY=${GEMINI_API_KEY}
       - GEMINI_MODEL=${GEMINI_MODEL}
       - EVOLUTION_API_URL=http://evolution:8080
