feat: add reconnect button for WhatsApp connections
- Add reconnect endpoint that regenerates QR code without losing data
- Reconnect button always visible (even when status shows connected)
- If instance doesn't exist in Evolution, recreate it with same instanceKey
- Fix internal network to allow Evolution to reach WhatsApp servers
- Add refresh button to connections list

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -193,6 +193,6 @@ volumes:
 networks:
   internal-network:
     driver: bridge
-    internal: true
+    # Removido 'internal: true' para permitir que Evolution acesse servidores do WhatsApp
   proxy-network:
     external: true
