feat: Implementação da página de assinatura com Stripe
- Criado módulo de subscription no backend (controller, service, module)
- Adicionados endpoints para planos, checkout embedded e webhooks
- Criados componentes PricingView e CheckoutView no frontend
- Planos: Essencial (R97), Profissional (R97), Empresarial (sob consulta)
- Integração com Stripe Elements para checkout seguro
- Suporte a tema claro/escuro
- FAQs e trust badges na página de planos

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -124,6 +124,13 @@ services:
       - EVOLUTION_API_URL=http://evolution:8080
       - EVOLUTION_API_KEY=${EVOLUTION_API_KEY}
       - FRONTEND_URL=https://respondia.pro
+      # Stripe
+      - STRIPE_SECRET_KEY=${STRIPE_SECRET_KEY}
+      - STRIPE_WEBHOOK_SECRET=${STRIPE_WEBHOOK_SECRET}
+      - STRIPE_PRICE_ESSENCIAL_MONTHLY=${STRIPE_PRICE_ESSENCIAL_MONTHLY}
+      - STRIPE_PRICE_ESSENCIAL_YEARLY=${STRIPE_PRICE_ESSENCIAL_YEARLY}
+      - STRIPE_PRICE_PROFISSIONAL_MONTHLY=${STRIPE_PRICE_PROFISSIONAL_MONTHLY}
+      - STRIPE_PRICE_PROFISSIONAL_YEARLY=${STRIPE_PRICE_PROFISSIONAL_YEARLY}
     networks:
       - internal-network
       - proxy-network
@@ -156,6 +163,7 @@ services:
       args:
         - VITE_API_URL=https://api.respondia.pro
         - VITE_GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+        - VITE_STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY}
     image: respondia-frontend:latest
     container_name: respondia-frontend
     restart: always
