--- a/backend/package.json
+++ b/backend/package.json
@@ -34,9 +34,11 @@
     "google-auth-library": "^9.14.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "pg": "^8.16.3",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.8.3",
+    "stripe": "^17.5.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.9",
