--- a/backend/package.json
+++ b/backend/package.json
@@ -25,6 +25,8 @@
     "@nestjs/platform-socket.io": "^10.4.20",
     "@nestjs/websockets": "^10.4.20",
     "@prisma/client": "^6.2.0",
+    "@stripe/react-stripe-js": "^5.4.1",
+    "@stripe/stripe-js": "^8.6.1",
     "@types/bcrypt": "^6.0.0",
     "axios": "^1.13.2",
     "bcrypt": "^6.0.0",
@@ -38,7 +40,7 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "socket.io": "^4.8.3",
-    "stripe": "^17.5.0"
+    "stripe": "^17.7.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.4.9",
