migrando para nextjs

--- a/front/.env.example
+++ b/front/.env.example
@@ -1,3 +1,7 @@
-# Environment
-VITE_API_URL=http://localhost:4000
-VITE_GOOGLE_CLIENT_ID=your-google-client-id.apps.googleusercontent.com
+# Environment Variables
+
+# Google OAuth (Client ID público)
+NEXT_PUBLIC_GOOGLE_CLIENT_ID=your_google_client_id
+
+# API Backend URL (porta existente)
+NEXT_PUBLIC_API_URL=http://localhost:4000
