--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,7 +87,7 @@ services:
     networks:
       - saas-network
 
-  # Frontend React App
+  # Frontend Next.js App
   frontend:
     build:
       context: ./front
@@ -97,11 +97,13 @@ services:
     ports:
       - "5173:5173"
     environment:
-      - VITE_API_URL=http://localhost:4000
-      - VITE_GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - NEXT_PUBLIC_API_URL=http://localhost:4000
+      - NEXT_PUBLIC_GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - HOSTNAME=0.0.0.0
     volumes:
       - ./front:/app
       - /app/node_modules
+      - /app/.next
     networks:
       - saas-network
       - proxy-network
