fix: produção Next.js standalone + MUI v7 + API methods
- Dockerfile.prod: convertido de Vite/Nginx para Next.js standalone
- next.config.ts: adicionado output standalone
- docker-compose.prod.yml: variáveis NEXT_PUBLIC_*
- App.tsx: process.env ao invés de import.meta.env
- MUI v7: Grid syntax, ListItemButton, variants
- lib/api.ts: adicionados métodos faltantes (flows, CRM, integrations, secretary tasks)
- Corrigido response.data em CheckoutView e PricingView
- Criada pasta public para Next.js standalone

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -147,31 +147,37 @@ services:
           memory: 256M
 
   # ===========================================
-  # FRONTEND - React + Nginx
+  # FRONTEND - Next.js
   # ===========================================
   frontend:
     build:
       context: ./front
       dockerfile: Dockerfile.prod
       args:
-        - VITE_API_URL=https://api.respondia.pro
-        - VITE_GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
-        - VITE_STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY}
+        - NEXT_PUBLIC_API_URL=https://api.respondia.pro
+        - NEXT_PUBLIC_GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+        - NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY}
     image: respondia-frontend:latest
     container_name: respondia-frontend
     restart: always
     ports:
       - "5173:5173"
+    environment:
+      - NODE_ENV=production
+      - NEXT_PUBLIC_API_URL=https://api.respondia.pro
+      - NEXT_PUBLIC_GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
+      - NEXT_PUBLIC_STRIPE_PUBLISHABLE_KEY=${STRIPE_PUBLISHABLE_KEY}
     networks:
+      - internal-network
       - proxy-network
     depends_on:
       - backend
     deploy:
       resources:
         limits:
-          memory: 128M
+          memory: 512M
         reservations:
-          memory: 64M
+          memory: 256M
 
 volumes:
   postgres_data:
