fix: MUI Grid v2 syntax + Redis noeviction policy
- Updated Grid components to use size={{ xs, md, lg }} instead of item prop
- Fixed TrainingStatsTab props issue
- Changed Redis maxmemory-policy from allkeys-lru to noeviction for BullMQ

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -37,7 +37,7 @@ services:
       - redis_data:/data
     networks:
       - internal-network
-    command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy allkeys-lru
+    command: redis-server --appendonly yes --maxmemory 256mb --maxmemory-policy noeviction
     healthcheck:
       test: ["CMD", "redis-cli", "ping"]
       interval: 10s
