--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,9 +1,9 @@
 services:
   # ===========================================
-  # DATABASE - PostgreSQL
+  # DATABASE - PostgreSQL with pgvector
   # ===========================================
   postgres:
-    image: postgres:15-alpine
+    image: pgvector/pgvector:pg15
     container_name: respondia-postgres
     restart: always
     environment:
@@ -12,6 +12,7 @@ services:
       POSTGRES_DB: ${POSTGRES_DB:-whatsapp_bot}
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./backend/prisma/init-pgvector.sql:/docker-entrypoint-initdb.d/init-pgvector.sql
     networks:
       - internal-network
     healthcheck:
