--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: postgres:15-alpine
+    image: pgvector/pgvector:pg15
     container_name: whatsapp-postgres
     restart: unless-stopped
     environment:
@@ -9,6 +9,7 @@ services:
       POSTGRES_DB: whatsapp_bot
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./backend/prisma/init-pgvector.sql:/docker-entrypoint-initdb.d/init-pgvector.sql
     networks:
       - saas-network
     healthcheck:
