--- a/front/package.json
+++ b/front/package.json
@@ -9,23 +9,27 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "next": "^16.1.1",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "@mui/material": "^7.3.7",
-    "@mui/icons-material": "^7.3.7",
-    "@mui/material-nextjs": "^7.3.7",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@emotion/cache": "^11.14.0",
+    "@mui/icons-material": "^7.3.7",
+    "@mui/material": "^7.3.7",
+    "@mui/material-nextjs": "^7.3.7",
     "@react-oauth/google": "^0.12.1",
-    "@tanstack/react-query": "^5.60.0",
-    "axios": "^1.7.0",
     "@stripe/react-stripe-js": "^3.1.0",
     "@stripe/stripe-js": "^5.5.0",
+    "@tanstack/react-query": "^5.60.0",
+    "axios": "^1.7.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^11.15.0",
     "lucide-react": "^0.469.0",
+    "next": "^16.1.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "recharts": "^2.13.3",
     "socket.io-client": "^4.8.3"
   },
