--- a/backend/package.json
+++ b/backend/package.json
@@ -34,6 +34,7 @@
     "bullmq": "^5.34.3",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "cron": "^4.4.0",
     "google-auth-library": "^9.14.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@nestjs/cli": "^10.4.9",
     "@nestjs/schematics": "^10.2.3",
+    "@types/cron": "^2.0.1",
     "@types/express": "^5.0.0",
     "@types/multer": "^2.0.0",
     "@types/node": "^22.10.2",
